--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .active {
+        @apply bg-white text-app-dark-gray;
+    }
+
+    .nonactive {
+        @apply bg-app-light-gray text-white;
+    }
+}
