--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,15 @@
         @apply bg-app-light-gray text-white;
     }
 }
+
+@layer base {
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+}
