--- a/public/views/splashscreen.html
+++ b/public/views/splashscreen.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../src/styles.css" />
-    <link rel="stylesheet" href="../src/montserrat.css">
+    <link rel="stylesheet" href="../../src/styles.css" />
+    <link rel="stylesheet" href="../../src/montserrat.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sikontrol</title>
-    <script type="module" src="../src/main.ts" defer></script>
+    <script type="module" src="../../src/main.ts" defer></script>
   </head>
 
   <body class="select-none" data-controller="splash">
